5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1760_672.log
== TEST (2019-05-27 18:25:38) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n=int(input("numero inteiro:")
v=ones(n,dtype=int)
print(v)
-- ERROR:
File "XXXX", line 5
    v=ones(n,dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:25:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n=int(input("numero inteiro:")
v=ones(n,dtype=int):
print(v)
-- ERROR:
File "XXXX", line 5
    v=ones(n,dtype=int):
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:26:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n=int(input("numero inteiro:")
v=ones(v,dtype=int)
print(v)
-- ERROR:
File "XXXX", line 5
    v=ones(v,dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:31:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n=int(input("numero inteiro:"))
v=ones(n,dtype=int)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:31:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n=int(input("numero inteiro:"))
v=ones(n,dtype=int)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:31:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n=int(input("numero inteiro:"))
v=ones(n,dtype=int)
print(v)
-- EXECUTION TIME:
0.58628
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
